# postgres

./: configure  configure.ac  meson.build
contrib/: Makefile  meson.build
contrib/amcheck/: verify_heapam.c
contrib/pageinspect/: brinfuncs.c  btreefuncs.c
contrib/pg_stat_statements/: pg_stat_statements.c
contrib/pg_tracing/: Makefile  explain.c  explain.h  meson.build  pg_tracing--1.0.sql  pg_tracing.c  pg_tracing.h  query_process.c  query_process.h  span.c  span.h
contrib/pg_tracing/expected/: nested.out  parallel.out  sample.out  select.out  subxact.out  utility.out  wal.out
contrib/pg_tracing/sql/: cleanup.sql  nested.sql  parallel.sql  sample.sql  select.sql  subxact.sql  utility.sql  wal.sql
contrib/pgrowlocks/: pgrowlocks.c
contrib/test_decoding/: test_decoding.c
doc/src/sgml/: btree.sgml  config.sgml  filelist.sgml  func.sgml  libpq.sgml  maintenance.sgml  monitoring.sgml  xfunc.sgml  xindex.sgml
src/backend/bootstrap/: bootstrap.c
src/backend/catalog/: heap.c  information_schema.sql  namespace.c  pg_constraint.c  system_views.sql
src/backend/commands/: async.c  copy.c  copyfrom.c  copyfromparse.c  copyto.c  explain.c  sequence.c  subscriptioncmds.c  tablecmds.c  typecmds.c  vacuum.c
src/backend/executor/: functions.c  nodeModifyTable.c  spi.c
src/backend/libpq/: pqformat.c
src/backend/nodes/: copyfuncs.c  equalfuncs.c  outfuncs.c
src/backend/parser/: gram.y
src/backend/postmaster/: checkpointer.c
src/backend/tcop/: utility.c
src/common/: cryptohash_openssl.c  hmac_openssl.c
src/include/: c.h  pg_config.h.in  pgstat.h
(+162 files in other folders)
